--- a/Home.html
+++ b/Home.html
@@ -83,7 +83,7 @@ Language (ASL).</p>
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-9">Kanji</h4>
                 <h6 class="u-align-center u-text u-text-default u-text-10">Center/Middle (中) </h6>
                 <p class="u-align-center u-text u-text-default u-text-11">The JSL of 中 resembles the shape of the same kanji.</p>
-                <a href="https://youtu.be/OW2_jhoAJtM?si=DUX4VT7win3Rgvwi" class="u-border-none u-btn u-btn-round u-button-style u-custom-item u-hover-palette-4-light-1 u-palette-4-base u-radius u-btn-3"> Demonstration </a>
+                <a href="https://youtu.be/OW2_jhoAJtM?si=DUX4VT7win3Rgvwi" class="u-border-none u-btn u-btn-round u-button-style u-custom-item u-hover-palette-4-light-1 u-palette-4-base u-radius u-btn-3" target="_blank"> Demonstration </a>
               </div>
             </div>
           </div>
@@ -247,7 +247,7 @@ could receive education best suited for them. </p>
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-6" data-href="https://www.imdb.com/title/tt30024091/">Sign of Affection, IMDB</a>
                 </p>
                 <p class="u-text u-text-default u-text-7">
-                  <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-7" data-href="https://tenor.com/view/yubisaki-to-renren-a-sign-of-affection-itsuomi-nagi-gif-15540251295960994590" data-target="_blank">Sign of Affection gif, Tenor</a>
+                  <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-7" data-href="https://tenor.com/view/yubisaki-to-renren-a-sign-of-affection-itsuomi-nagi-gif-15540251295960994590" data-target="_blank">Sign of Affection gif, IMDB</a>
                 </p>
                 <p class="u-text u-text-default u-text-8">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-8" data-href="https://www.quora.com/What-is-the-different-time-for-using-Hiragana-and-Katakana-in-the-Japanese-language">Hiragana and Katagana chart, Quora</a>
