--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Language (ASL).</p>
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-9">Kanji</h4>
                 <h6 class="u-align-center u-text u-text-default u-text-10">Center/Middle (中) </h6>
                 <p class="u-align-center u-text u-text-default u-text-11">The JSL of 中 resembles the shape of the same kanji.</p>
-                <a href="https://youtu.be/OW2_jhoAJtM?si=DUX4VT7win3Rgvwi" class="u-border-none u-btn u-btn-round u-button-style u-custom-item u-hover-palette-4-light-1 u-palette-4-base u-radius u-btn-3"> Demonstration </a>
+                <a href="https://youtu.be/OW2_jhoAJtM?si=DUX4VT7win3Rgvwi" class="u-border-none u-btn u-btn-round u-button-style u-custom-item u-hover-palette-4-light-1 u-palette-4-base u-radius u-btn-3" target="_blank"> Demonstration </a>
               </div>
             </div>
           </div>
